--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
+    "preinstall": "npm install -g @angular/cli",
+    "postinstall": "ng build --prod --output-hashing=none"
   },
   "private": true,
   "dependencies": {
