--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "dependencies": {
     "@angular/animations": "^7.0.1",
     "@angular/cdk": "^7.0.2",
+    "@angular/cli": "7.0.3",
     "@angular/common": "^7.0.1",
     "@angular/compiler": "^7.0.1",
     "@angular/compiler-cli": "^7.0.1",
-    "@angular/cli": "7.0.3",
     "@angular/core": "^7.0.1",
     "@angular/forms": "^7.0.1",
     "@angular/http": "^7.0.1",
@@ -27,20 +27,20 @@
     "@angular/platform-browser": "^7.0.1",
     "@angular/platform-browser-dynamic": "^7.0.1",
     "@angular/router": "^7.0.1",
-    "core-js": "^2.4.1",
-    "express": "^4.16.2",
+    "core-js": "^2.5.7",
+    "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.3.3",
     "typescript": "~3.1.3",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "^0.10.3",
     "@angular/language-service": "^7.0.1",
     "@types/jasmine": "~2.8.9",
-    "@types/jasminewd2": "~2.0.2",
+    "@types/jasminewd2": "^2.0.5",
     "@types/node": "~10.12.0",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^4.5.0",
     "enhanced-resolve": "^4.1.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -48,11 +48,12 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "~1.1.0",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.1",
     "ts-node": "~7.0.1",
-    "tslint": "~5.11.0"
+    "tslint": "~5.11.0",
+    "webpack": "^4.23.1"
   },
   "engines": {
     "node": "9.3.0",
